- add new UDK class Geo-Service   WORK IN PROGRESS